--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "xlsx": "^0.14.3"
     },
     "devDependencies": {
-        "cross-env": "^3.1.3"
+        "cross-env": "^3.1.3",
+        "json-server": "^0.15.1"
     }
 }
